--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
