--- a/serenity.properties
+++ b/serenity.properties
@@ -2,6 +2,7 @@ serenity.project.name=Serenity Appium Java POC
 
 #APPIUM APP
 webdriver.driver= appium
+#webdriver.driver.type=manual
 appium.hub = http://127.0.0.1:4723/wd/hub
 appium.platformName = Android
 #appium.platformVersion = 11.0
@@ -14,7 +15,7 @@ serenity.take.screenshots=FOR_EACH_ACTION
 #APPIUM DESKTOP
 #{
 #"platformName": "Android",
-#"deviceName": "qazandoandroid",
+#"deviceName": "emulator-5554",
 #"automationName": "uiautomator2",
 #"appPackage": "flipboard.app",
 #"appActivity": "flipboard.activities.LaunchActivityAlias"
