--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -2,32 +2,33 @@ environments {
   default {
     url = "http://dev.myapp.myorg.com";
     android {
-        app = "link.apk";
-        deviceName = "emulator-5554";
-        appPackage = "flipboard.app";
-        appActivity = "flipboard.activities.LaunchActivityAlias";
-        automationName = "UIAutomator2";
-        urlAppium = "127.0.0.1:4723";
+        app = "src/test/resources/app/flipboard.apk"
+        deviceName = "emulator-5554"
+        appPackage = "flipboard.app"
+        appActivity = "flipboard.activities.LaunchActivityAlias"
+        automationName = "UIAutomator2"
+        urlAppium = "127.0.0.1:4723"
+        platformName = "android"
     }
     ios {
-        app = "link.apk";
-        deviceName = "emulator-5554";
-        appPackage = "flipboard.app";
-        appActivity = "flipboard.activities.LaunchActivityAlias";
-        automationName = "XCUITest";
-        urlAppium = "127.0.0.1:4723";
+        app = "link.apk"
+        deviceName = "emulator-5554"
+        appPackage = "flipboard.app"
+        appActivity = "flipboard.activities.LaunchActivityAlias"
+        automationName = "XCUITest"
+        urlAppium = "127.0.0.1:4723"
     }
   }
 
   dev {
-    url = "http://dev.myapp.myorg.com";
+    url = "http://dev.myapp.myorg.com"
     android {
-            app = "link.apk";
-            deviceName = "";
+            app = "link.apk"
+            deviceName = ""
         }
         ios {
-                app = "link.apk";
-                deviceName = "";
+                app = "link.apk"
+                deviceName = ""
         }
   }
   staging {
